# ALIEN

./: .gitignore  README.md  api.env  classify_selected.py  data_processing.py  eval_core.py  eval_refind.py  eval_semeval.py  fewshot_core.py  pyproject.toml  rag_classifier.py  reflection_agent.py  reflection_agent_core.py  reflection_agent_refind.py  reflection_agent_semeval.py  relationships_semeval.csv  resume.py  sample_selector.py  slurm-56458993.out  slurm-56460725.out  test_finred.csv  test_refined_filtered.csv  test_refined_filtered_lite.csv  test_semeval_filtered.csv  two_agent_selector.py
.ipynb_checkpoints/: classify_selected-checkpoint.py  job-Copy1-checkpoint.sh  job-Copy2-checkpoint.sh  job-checkpoint.sh  recover-checkpoint.py  resume-checkpoint.py  resume_agent2_selection-checkpoint.py  sample_selector-checkpoint.py  slurm-54625681-checkpoint.out  slurm-54656391-checkpoint.out  slurm-56458993-checkpoint.out  slurm-56460563-checkpoint.out  slurm-56466897-checkpoint.out  slurm-56466946-checkpoint.out  two_agent_selector-checkpoint.py
Final_Data_Amin/: relationships_core_25Flash4o.csv  relationships_core_25ProO3mini.csv  relationships_core_Sonnet4O3mini.csv  relationships_core_Sonnet4O3mini_no-batch.csv  relationships_refind_25Flash4o.csv  relationships_refind_25ProO3mini.csv  relationships_semeval_25Flash4o.csv  relationships_semeval_25ProO3mini.csv  relationships_semeval_3shot25Flash.csv  relationships_semeval_3shot4O.csv  relationships_semeval_fewshot4O.csv  relationships_semeval_fewshotFlash.csv  relationships_semeval_zeroshot25Flash.csv  (+1 more)
(+48 files in other folders)
