[project]
name = "alien"
version = "0.1.0"
description = ""
authors = [
    {name = "Amin Sehati",email = "aminsehati@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
